--- a/package.json
+++ b/package.json
@@ -1,23 +1,16 @@
 {
-  "name": "xiangqi-recognizer",
-  "private": true,
-  "version": "0.1.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
   "dependencies": {
     "@google/genai": "^1.35.0",
-    "htm": "^3.1.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "htm": "^3.1.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
-    "vite": "^5.4.10"
+    "vite": "^5.4.0"
+  },
+  "scripts": {
+    "build": "vite build",
+    "dev": "vite"
   }
 }
